fixing dark mode toggle button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,14 +46,14 @@ body {
   bottom: 26px;
   color: white;
   margin: -22px 1px;
-  transition: 0.5s;
+  transition: 0.6s;
 }
 .bi.bi-sun {
   position: absolute;
   height: 15px;
   width: 15px;
   margin: 4px;
-  transition: 0.5s;
+  transition: 0.6s;
 }
 /* Toggle Switch */
 .switch {
